Fixed overflow for mobile.

--- a/styles.css
+++ b/styles.css
@@ -32,16 +32,20 @@
 #question-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     width: 75%;
     height: 75%;
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+    background-color: rgb(0, 0, 0); 
+    background-color: rgba(0, 0, 0, 0.4); 
     color: white;
     font-weight: bold;
     border: 3px solid #f1f1f1;
     padding: 20px;
+    overflow-y: auto;
+}
+
+#question-container::-webkit-scrollbar {
+    display: none;
 }
 
 #hero-image {
